--- a/public/css/belie.css
+++ b/public/css/belie.css
@@ -399,7 +399,7 @@ a:visited {
 .renovation {
   background-image: url(../img/renovacionBGH.jpg);
   background-position: center top;
-  background-size: 100% auto;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   padding-top: 4rem;
   margin-top: 6rem;
@@ -445,13 +445,13 @@ p {
 .catalogo_textos h1 {
   padding: 2rem;
   font-size: 6rem;
-  text-align: center;
+  text-align: left;
 }
 
 .catalogo_textos p {
   font-size: 2rem;
   padding: 2rem;
-  text-align: center;
+  text-align: left;
 }
 
 /*Form */
@@ -463,13 +463,6 @@ form {
   padding: 2rem 2rem 0 2rem;
 }
 
-form > h1 {
-  background-color: var(--blanco);
-  width: fit-content;
-  display: block;
-  padding: 0.5rem 1rem;
-}
-
 form > hr {
   border: none;
   border-top: solid 3px var(--nude);
@@ -479,8 +472,9 @@ form > hr {
 }
 
 form > p {
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   font-size: 1.8rem;
+  text-align: left;
 }
 
 form > div {
@@ -488,7 +482,7 @@ form > div {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin: 2.5rem auto;
+  margin: 1.5rem auto;
 }
 
 .logError {
@@ -505,6 +499,15 @@ form > div {
   font-weight: 600;
 }
 
+.direction-row{
+  flex-direction: row;
+}
+
+.direction-row > div{
+  width: 45%;
+}
+
+
 .row > label {
   width: 100%;
   font-size: 1.5rem;
@@ -514,13 +517,17 @@ form > div {
 }
 
 .rowInput {
-  padding: 1rem;
+  padding: 0.5rem;
   border: solid 3px var(--lavender);
   background-color: var(--blanco);
   border-radius: 7px;
   outline: none;
-  line-height: 2.5rem;
-  font-size: 2rem;
+  line-height: 2rem;
+  font-size: 1.5rem;
+  width: 100%;
+}
+
+.inputIdealPara{
   width: 100%;
 }
 
@@ -558,6 +565,10 @@ form > div {
   line-height: 2.5rem;
   font-size: 2rem;
   border: solid 3px darkred;
+}
+
+.row{
+  margin: 0.5rem auto;
 }
 
 .row span {
@@ -636,20 +647,26 @@ i:hover {
 
 .backToCat {
   text-decoration: none;
-  color: var(--negro);
+  color: var(--nude);
   font-size: 2rem;
   font-weight: 600;
   text-align: right;
-  background-color: var(--nude);
+  background-color: var(--negro);
   padding: 2rem;
   transition: background-color 0.3s ease-in;
   border-radius: 5%;
 }
 
-.backToCat:hover {
-  color: var(--blanco);
+.backToCat:visited {
+  color: var(--nude);
   background-color: var(--negro);
 }
+
+.backToCat:hover {
+  color: var(--negro);
+  background-color: var(--nude);
+}
+
 @media only screen and (max-width: 956px) {
 
   .renovation{
@@ -699,7 +716,7 @@ i:hover {
 
   .renovation{
     margin-top: 2rem;
-    background-size: 120% auto;
+    background-size: 120% 100%;
   }
   .renovation_textos{
     margin-top: 2rem;
@@ -751,7 +768,7 @@ i:hover {
   .renovation {
     background-image: url(../img/renovacionBGV.jpg);
     background-position: center top;
-    background-size: 100% auto;
+    background-size: 100% 110%;
     background-repeat: no-repeat;
   }
   .renovation_textos{
@@ -810,6 +827,7 @@ i:hover {
     margin: 0 auto 3rem auto;
     padding: 3rem 10%;
   }
+  
   
   .renovation_Logo {
     width: 100%;
