--- a/src/components/css/CardShort.css
+++ b/src/components/css/CardShort.css
@@ -1,49 +1,118 @@
-
-
 /* CardShort = Usada en Linea Baño y Velas */
 
 .cardShort {
-    background-image: linear-gradient(90deg, var(--nude) 30%, var(--blanco) 120%);
-    width: 370px;
-    border-radius: 5%;
-    box-shadow: var(--sombraBasica);
-    position: relative;
+  background-image: linear-gradient(90deg, var(--nude) 30%, var(--blanco) 120%);
+  width: 370px;
+  border-radius: 5%;
+  box-shadow: var(--sombraBasica);
+  position: relative;
 }
 
+.proximamenteNaranja::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../../public/img/ProximamenteSNaranja.jpg");
+  background-position: center left;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  content: "";
+  transition: height 1s ease-in-out;
+  z-index: 2;
+}
+
+.proximamenteAzul::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../../../public/img/proximamenteSAzul.jpg");
+    background-position: center top;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    content: "";
+    transition: height 1s ease-in-out;
+    z-index: 2;
+  }
+
+  .proximamenteNude::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../../../public/img/proximamenteSNude.jpg");
+    background-position: center top;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    content: "";
+    transition: height 1s ease-in-out;
+    z-index: 2;
+  }
+
+.proximamenteNaranja:hover::before {
+  height: 0;
+}
+.proximamenteAzul:hover::before {
+    height: 0;
+  }
+  .proximamenteNude:hover::before {
+    height: 0;
+  }
+
 .cardShort_header {
-    margin: 4rem 2rem 2rem 2rem;
+  margin: 4rem 2rem 2rem 2rem;
 }
 
 .cardShort_header img {
-    width: 100%;
-    max-height: 5rem;
-    object-fit: cover;
+  width: 100%;
+  max-height: 5rem;
+  object-fit: cover;
 }
 
 .cardShort_body {
-    padding: 3rem 3rem;
+  padding: 3rem 3rem;
 }
 
 .cardShort_body h2 {
-    margin-left: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .cardShort_body p {
-    padding: 0 1.5rem;
-    text-align: left;
+  padding: 0 1.5rem;
+  text-align: left;
 }
 
+.cardShort_oculto{
+  display: block;
+  background-color: var(--negro);
+  color: var(--blanco);
+  width: fit-content;
+  padding: 1rem ;
+  transform: rotate(-12deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@media only screen and (max-width: 541px) {
+  .cardShort {
+    width: 80%;
+  }
+
+  .cardShort_body > h2 {
+    font-size: 3rem;
+  }
+  .cardShort_body > p {
+    font-size: 1.5rem;
+  }
+}
 
 @media only screen and (max-width: 378px) {
-
-    .cardShort {
-        width: 70%;
-    }
-
-    .cardShort_body > h2 {
-        font-size: 3.5rem;
-    }
-    .cardShort_body > p {
-        font-size: 2rem;
-    }
+  .cardShort {
+    width: 70%;
+  }
 }
