--- a/src/components/css/EditModal.css
+++ b/src/components/css/EditModal.css
@@ -3,9 +3,10 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 0.9);
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     transition: all 0.5s ease-in-out;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    overflow: auto;
 
 }
 .displayOn{
@@ -35,7 +36,7 @@
 @media only screen and (max-width: 768px) {
 
 .modalContent{
-    width: 70%;
+    width: 90%;
 }
 
 }
