--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -1,68 +1,63 @@
-
-
 /*COMPONENTES LOGIN Y REGISTER TOMAN ESTA HOJA DE ESTILOS*/
 
 .register_container {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    background-color: var(--mistyRose);
-    padding-bottom: 1rem;
+  height: 100vh;
+  width: 100%;
 }
 
 .BelieTitulo {
-    margin-top: 2rem;
-    font-size: 10rem;
-    font-family: var(--belieFont);
+  font-size: 10rem;
+  font-family: var(--belieFont);
 }
 
 .BelieSubtitulo {
-    font-family: var(--joseSlab);
+  font-family: var(--joseSlab);
 }
 
 .register_blob {
-    width: 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../../../public/img/RegisterBG.jpg);
+  width: 100%;
+  height: 100%;
+  background-size: 130% 140%;
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-image: url(../../../public/img/RegisterBG.jpg);
+  display: flex;
+  flex-direction: column;
 }
 .cardForm {
-    display: block;
-    margin: 10% auto 0 auto;
+  width: 25%;
+  display: block;
+  margin: 3rem auto;
+  background-color: var(--mistyRose);
+  height: fit-content;
+  padding: 2rem;
 }
 
-
+.loginBtn {
+  background-color: var(--aqua);
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  font-size: 2rem;
+  font-weight: 900;
+  color: var(--negro);
+  border-radius: 7px;
+  transition: background-color 0.2s ease-in-out;
+  border: solid 3px #badbc0;
+}
+.loginBtn:hover {
+  background-color: #badbc0;
+}
+@media only screen and (max-width: 900px) {
+    .cardForm {
+      width: 50%;
+    }
+  }
+  
 @media only screen and (max-width: 768px) {
-
-    .register_blob {
-        display: none;
-    }
-
-    .register_form {
-        width: 100%;
-    }
-
-    .cardForm {
-        width: 100%;
-    }
-
-    .cardForm {
-        width: 100%;
-        padding: 1rem;
-        margin: 0;
-    }
-
+  .cardForm {
+    width: 80%;
+  }
 }
 
 @media only screen and (max-width: 376px) {
-
-
-    .cardForm {
-        width: 100%;
-        padding: 0.5rem 1rem;
-        margin: 0;
-    }
-    .register_container > div{
-        width: 100%;
-    }
 }
